Closed Bug 1922183 Opened 4 months ago Closed 4 months ago

Crash @xpc_array_set_fd for XPC API Misuse on iOS on cedar branch with bug 1440207

Categories

(Core :: IPC, defect)

defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox131 --- unaffected
firefox132 --- unaffected
firefox133 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Of course the cedar branch currently needs adjustments to things that haven't landed on central yet, but let's at least fix the part that is in central.

Set release status flags based on info from the regressing bug 1440207

Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/5b637d0e3342 Fix xpc_array_set_fd use in IosProcessLauncher::DoLaunch. r=nika
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: