Bug 1922183 - Fix xpc_array_set_fd use in IosProcessLauncher::DoLaunch. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D224286